__scss/custom.scss
/* ... */
$navbar-dark-toggler-border-color:  rgba($white, .1) !default;

$navbar-light-color:                rgba($uta-darkblue, .9) !default;
$navbar-light-hover-color:          rgba($uta-darkblue, .99) !default;
$navbar-light-active-color:         rgba($uta-darkblue, .99) !default;
$navbar-light-disabled-color:       rgba($black, .3) !default;
$navbar-light-toggler-icon-bg:      url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'><path stroke='#{$navbar-light-color}' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>") !default;
$navbar-light-toggler-border-color: rgba($uta-darkblue, .1) !default;

$navbar-light-brand-color:                $navbar-light-active-color !default;
$navbar-light-brand-hover-color:          $navbar-light-active-color !default;
$navbar-dark-brand-color:                 $navbar-dark-active-color !default;
$navbar-dark-brand-hover-color:           $navbar-dark-active-color !default;

// Dropdowns
//
// Dropdown menu container and contents.

$dropdown-min-width:                10rem !default;
$dropdown-padding-y:                .5rem !default;
$dropdown-spacer:                   .125rem !default;
$dropdown-font-size:                $font-size-base !default;
$dropdown-color:                    $body-color !default;
$dropdown-bg:                       $white !default;
$dropdown-border-color:             rgba($uta-darkblue, .35) !default;
//$dropdown-border-radius:            $border-radius !default;
//$dropdown-border-width:             $border-width !default;
//$dropdown-inner-border-radius:      subtract($dropdown-border-radius, $dropdown-border-width) !default;
$dropdown-divider-bg:               $gray-200 !default;
$dropdown-divider-margin-y:         $nav-divider-margin-y !default;
$dropdown-box-shadow:               0 .5rem 1rem rgba($black, .175) !default;

$dropdown-link-color:               $gray-900 !default;
$dropdown-link-hover-color:         $white !default;
$dropdown-link-hover-bg:            $uta-darkblue !default;

//$dropdown-link-active-color:        $component-active-color !default;
//$dropdown-link-active-bg:           $component-active-bg !default;

$dropdown-link-disabled-color:      $gray-600 !default;

$dropdown-item-padding-y:           .25rem !default;
$dropdown-item-padding-x:           1.5rem !default;

$dropdown-header-color:             $gray-600 !default;
$dropdown-header-padding:           $dropdown-padding-y $dropdown-item-padding-x !default;

// Alerts
//
// Define alert colors, border radius, and padding.

$alert-padding-y:                   .75rem !default;
$alert-padding-x:                   1rem !default;
$alert-margin-bottom:               1rem !default;
$alert-border-radius:               0 !default;
$alert-link-font-weight:            $font-weight-bold !default;
$alert-border-width:                1px2px !default;

$alert-bg-level:                    -10 !default;
$alert-border-level:                -9 !default;
$alert-color-level:                 9 !default;

/******************************************************************************
 * Building Bootstrap
 ******************************************************************************/

 @import "../node_modules/bootstrap/scss/bootstrap";



 
/******************************************************************************
 * Customization for UTA Build
 ******************************************************************************/

// Skip to Content Link
.skippy {display: block;padding: 1em !important;color: $white;text-align: center;background-color: $uta-darkblue;outline: 0;  
    @include hover() {color: $white;}
} 
.skippy-text {padding: .5em;outline: 1px dotted;}

// Top of Page Branding and Navigation
@media screen and (max-width:768px) {
    a.navbar-brand {margin:0;}
}
#uta-logo {max-height: 35px;width: auto;}
#site-title {color:white}
nav#site-navigation {font-size:110%;font-weight:500}
nav#site-navigation .nav-item a.nav-link {border-bottom:1px solid white}
nav#site-navigation .nav-item a.nav-link:hover {border-bottom:1px solid $uta-darkblue}
//nav#site-navigation .dropdown-menu a.dropdown-item:hover {background-color: $uta-darkblue;color:white}
//nav#site-navigation .dropdown-menu {background-color:#efeff4}
div#global-navigation {border-top: 6px solid #f58025; background-color:$uta-darkblue}

//Alerts
.alert {border-left:4px solid transparent;padding-left:50px !important}
.alert-primary {border-color:$uta-darkblue}
.alert-secondary {border-color:$uta-blue}
.alert-success {border-color:$success}
.alert-danger {border-color:$danger}
.alert-warning {border-color:$warning}
.alert-info {border-color:$info}
.alert-light {border-color:black}
.alert-dark {border-color:black}
.alert a {text-decoration:underline}

.alert:before {
    font-family: Font Awesome\ 5 Free;
    font-weight: 900;align-items: center;
    bottom: 0;display: flex;
    left: 0;padding: .75rem 1.25rem;
    position: absolute; top: 0;
}
.alert-success:before {color: $success; content: "\f058";}
.alert-danger:before {content: "\f056";transform: rotate(40deg);color:$danger}
.alert-warning:before {content: "\f071";color:$warning}
.alert-info:before {content: "\f05a";color:$info}

// Sidebar
#site-sidebar {border-left:1px solid $uta-orange}
#site-sidebar p, #site-sidebar li {font-size: 0.95em;}
#site-sidebar h1 {font-size:1.5em;}
#site-sidebar h2 {font-size:1.4em;}
#site-sidebar h3 {font-size:1.2em;}
#site-sidebar h4 {font-size:1.1em;}

// Main Content Area
#maincontent {min-height:700px;}

// Footer
#footer-area {
    background-color: #003366;
    color: white;
    margin-top: 20px;
    padding: 20px 0 40px 0;
    min-height:200px;
}
#footer-area h1, #footer-area h2, 
#footer-area h3, #footer-area h4, 
#footer-area h5, #footer-area h6 {
    color:white;
}
#footer-area .social-icons {color:#dedede;font-size:2em}
#footer-area .social-icons a {color:#dedede}
#footer-area .social-icons a:hover {color:#ffff}
/* ... */

